<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".Categories.LayoutTransport">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_cancel"
            android:layout_margin="18dp"
            android:id="@+id/cancel_transport"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Сохранить и выйти"
            android:textColor="@color/colorSecondaryText"
            android:textStyle="normal"
            android:layout_marginStart="200dp"
            android:layout_marginTop="18dp"
            android:id="@+id/save_and_exit"/>


    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/Transport"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/add_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/cars"
        android:textColor="@color/white"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/add_motobike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/motorbike"
        android:textColor="@color/white"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/add_tracks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:text="@string/tracks_and_special_tracks"
        android:textColor="@color/white"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/add_spare_parts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="30dp"
        android:text="@string/etc"
        android:textColor="@color/white"
        android:textSize="15dp" />





</LinearLayout>